# bevy-particular-demo

./: Cargo.toml  README.md  build_web.bat
docs/: index.html  wasm_particular-demo.d.ts  wasm_particular-demo.js  wasm_particular-demo_bg.wasm.d.ts
src/: input.rs  main.rs  nbody.rs  simulation_scenes.rs  trails.rs
src/simulation_scene/: loaded_scene.rs  mod.rs  scene_data.rs  systems.rs
